examples/test/testpolicy13172.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13172
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key29: value9
      key35: value2
      key11: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value0
      podSelector:
        matchLabels:
          key29: value41
          key34: value14
          key46: value36
